ci/k8s/grpc-server/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grpc-server
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server
  namespace: grpc-server
spec:
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      containers:
      - name: grpc-server
        image: rminz/grpc-server:v4
        args:
        - "0.0.0.0:5557"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5557
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-server
  namespace: grpc-server
spec:
  selector:
    app: grpc-server
  ports:
  - port: 5557
    targetPort: 5557
    name: grpc
    protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-server
  namespace: grpc-server
spec:
  hosts:
  - grpc-server-grpc-server.k8s.orb.local
  gateways:
  - istio-system/ingress
  http:
  - headers:
      request:
        add:
          X-Gozero-Target-Port: "5557"
          X-Gozero-Target-Host: "grpc-server.grpc-server.svc.cluster.local"
          X-Gozero-Target-Scheme: "http"
          X-Gozero-Target-Retries: "10"
          X-Gozero-Target-Backoff: "100ms"
    route:
    # - destination:
    #     host: app.app-a.svc.cluster.local
    #     port:
    #       number: 3000
    - destination:
        host: gozero.gozero.svc.cluster.local
        port:
          number: 8443
    retries:
      attempts: 1
      perTryTimeout: 300s
